--- a/hello/angular.json
+++ b/hello/angular.json
@@ -20,12 +20,16 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+              "assets": [
+                {
+                  "glob": "**/*",
+                  "input": "public"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "src/assets"
+                }
+              ],
             "styles": [
               "src/styles.css"
             ],
